--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
 
 .grid {
   background: #EEE;
-  max-width: 100%;
+  max-width: 2000px;
 }
 
 .grid:after {
@@ -21,16 +21,17 @@ body {
   width: 250px;
   height: 250px;
   float: left;
-  background: #D26;
-  border: 2px solid #333;
-  border-color: hsla(0, 0%, 0%, 0.5);
+  border: 2px solid black;
   border-radius: 5px;
 }
 
-.grid-item--width2 { width: 200px; }
-.grid-item--width3 { width: 150px; }
-.grid-item--width4 { width: 250px; }
-
-.grid-item--height2 { height: 200px; }
-.grid-item--height3 { height: 150px; }
-.grid-item--height4 { height: 250px; }
+#album-content, #playlist-content {
+  position: absolute;
+  top: 100px;
+  left: 250px;
+  width: 500px;
+  height: 500px;
+  border: 2px solid black;
+  z-index: 10;
+  background: white;
+}
