--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 #album-content, #playlist-content {
-  position: absolute;
+  position: fixed;
   top: 100px;
   left: 250px;
   width: 500px;
