--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,12 +3,23 @@
 }
 
 body { 
-  font-family: sans-serif; 
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: black;
+}
+
+.shadow {
+  position: fixed;
+  background-color: black;
+  opacity: 0.8;
+  width: 100%;
+  height: 100vh;
 }
 
 .grid {
   background: #EEE;
-  max-width: 2000px;
+  max-width: 100%;
 }
 
 .grid:after {
@@ -25,13 +36,93 @@ body {
   border-radius: 5px;
 }
 
-#album-content, #playlist-content {
+.modal {
   position: fixed;
-  top: 100px;
-  left: 250px;
+  top: 50%;
+  left: 50%;
   width: 500px;
   height: 500px;
   border: 2px solid black;
   z-index: 10;
   background: white;
+  margin-left: -250px;
+  margin-top: -250px;
+  border-radius: 30px;
+  background-color: rgb(106, 227, 104);
+}
+
+#login-header {
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+#sign-up-anchor {
+  position: absolute;
+  text-align: center;
+  bottom: 5px;
+  left: 32%;
+}
+
+#spotify-logo {
+  height: 100px;
+  width: 8%;
+  display: block;
+  float: left;
+}
+
+#title-header {
+  display: block;
+  height: 100px;
+  width: 77%;
+  float: left;
+  margin: 0;
+  padding-top: 10px;
+  padding-left: 10px;
+  font-size: 75px;
+  color: rgb(29, 214, 94);
+}
+
+#button-div {
+  display: block;
+  width: 15%;
+  height: 100px;
+  float: left;
+}
+.button {
+  margin: .95em;
+  margin-top: 1.4em;
+  border-radius: 10px;
+  background-color: rgb(29, 214, 94);
+}
+
+/*.button {
+  background: #1dd55e;
+  background-image: -webkit-linear-gradient(top, #1dd55e, #1dff5d);
+  background-image: -moz-linear-gradient(top, #1dd55e, #1dff5d);
+  background-image: -ms-linear-gradient(top, #1dd55e, #1dff5d);
+  background-image: -o-linear-gradient(top, #1dd55e, #1dff5d);
+  background-image: linear-gradient(to bottom, #1dd55e, #1dff5d);
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: Courier New;
+  color: #000000;
+  font-size: 30px;
+  text-decoration: none;
+  height: 50px;
+  width: 100px;
+}*/
+
+.login-input {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  height: 50px;
+  width: 250px;
+}
+
+#login-submit-button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 75px;
 }
