--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,14 +2,23 @@
 <html>
 <head>
   <title>Login</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Login</h1>
-  <form method="POST" action="/login">
-    <input type="text" name="username">
-    <input type="password" name="password">
-    <input type="submit" value="Login">
-  </form>
-  <a href="/users/new">Not a Member? Sign Up!</a>
+  <div class="modal">
+    <h1 id="login-header">Login</h1>
+    <form method="POST" action="/login">
+      <div class="login-input">
+        <label>Username: </label>
+        <input type="text" name="username" placeholder="Username">
+      </div>
+      <div class="login-input">
+        <label>Password: </label>
+        <input type="password" name="password" placeholder="Password">
+      </div>
+      <input id="login-submit-button" type="submit" value="Login">
+    </form>
+    <a id="sign-up-anchor" href="/users/new">Not a Member? Sign Up!</a>
+  </div>
 </body>
 </html>
