--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,8 @@ body {
 .grid {
   background: #EEE;
   max-width: 100%;
+  width: 97vw;
+  margin: 0 auto;
 }
 
 .grid:after {
@@ -65,7 +67,7 @@ body {
 
 #spotify-logo {
   height: 100px;
-  width: 8%;
+  width: 100px;
   display: block;
   float: left;
 }
@@ -73,20 +75,22 @@ body {
 #title-header {
   display: block;
   height: 100px;
-  width: 77%;
+  width: 75%;
   float: left;
   margin: 0;
   padding-top: 10px;
-  padding-left: 10px;
+  padding-left: 20px;
   font-size: 75px;
   color: rgb(29, 214, 94);
 }
 
 #button-div {
+  position: fixed;
+  top: 0;
+  right: 0;
   display: block;
-  width: 15%;
+  width: 210px;
   height: 100px;
-  float: left;
 }
 .button {
   margin: .95em;
@@ -125,4 +129,50 @@ body {
   display: block;
   margin: 0 auto;
   margin-top: 75px;
+}
+
+#spotify-anchor {
+  display: block;
+  height: 25px;
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+#playlist-header {
+  text-align: center;
+}
+
+#tracks {
+  width: 500px;
+  height: 300px;
+  overflow: scroll;
+}
+
+#playlist-button-div {
+  position: absolute;
+  width: 500px;
+  bottom: 10px;
+}
+
+#back-button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 5px;
+}
+
+#submit-playlist {
+  display: block;
+  margin: 0 auto;
+  margin-top: 5px;
+}
+
+#playlist-input-div {
+  display: block;
+  width: 250px;
+  margin: 0 auto; 
+}
+
+#artist-name {
+  text-align: center;
 }
