messing with pop up player style

--- a/views/player.ejs
+++ b/views/player.ejs
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>Spotify Music Player</title>
+  <link rel="stylesheet" type="text/css" href="css/player.css">
 </head>
 <body>
-  <iframe src="https://embed.spotify.com/?uri=<%= id %>" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+  <iframe class="iframe" src="https://embed.spotify.com/?uri=<%= id %>" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 </body>
 </html>
