fixes some bugs

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Login</title>
+  <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
         <label>Password: </label>
         <input type="password" name="password" placeholder="Password">
       </div>
-      <input id="login-submit-button" type="submit" value="Login">
+      <input id="login-submit-button" type="submit" value="Log In">
     </form>
     <a id="sign-up-anchor" href="/users/new">Not a Member? Sign Up!</a>
   </div>
