--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ body {
   background: white;
   margin-left: -250px;
   margin-top: -250px;
-  border-radius: 30px;
+  border-radius: 15px;
   background-color: rgb(106, 227, 104);
 }
 
@@ -63,6 +63,15 @@ body {
   text-align: center;
   bottom: 5px;
   left: 32%;
+  color: #2EBD59;
+}
+
+#spotify-anchor {
+  position: absolute;
+  text-align: center;
+  bottom: 5px;
+  left: 40px;
+  color: #2EBD59;
 }
 
 #spotify-logo {
@@ -109,27 +118,10 @@ body {
 .track-p {
   display: inline-block;
   padding-left: 5px;
-  width: 420px;
+  width: 410px;
   font-size: 20px;
   text-decoration: bold;
 }
-/*.button {
-  background: #1dd55e;
-  background-image: -webkit-linear-gradient(top, #1dd55e, #1dff5d);
-  background-image: -moz-linear-gradient(top, #1dd55e, #1dff5d);
-  background-image: -ms-linear-gradient(top, #1dd55e, #1dff5d);
-  background-image: -o-linear-gradient(top, #1dd55e, #1dff5d);
-  background-image: linear-gradient(to bottom, #1dd55e, #1dff5d);
-  -webkit-border-radius: 10;
-  -moz-border-radius: 10;
-  border-radius: 10px;
-  font-family: Courier New;
-  color: #000000;
-  font-size: 30px;
-  text-decoration: none;
-  height: 50px;
-  width: 100px;
-}*/
 
 .login-input {
   position: relative;
@@ -146,7 +138,7 @@ body {
 }
 
 #tracks-two {
-  width: 500px;
+  width: 495px;
   height: 400px;
   overflow: scroll;
 }
@@ -155,14 +147,13 @@ body {
   display: block;
   margin: 0 auto;
   margin-top: 75px;
-}
-
-#spotify-anchor {
-  display: block;
-  height: 25px;
-  width: 300px;
-  margin: 0 auto;
-  margin-top: 100px;
+  width: 410px;
+  background-color: #2EBD59;
+  border-radius: 20px;
+  border-width: 0px;
+  height: 28px;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 #playlist-header {
@@ -170,7 +161,7 @@ body {
 }
 
 #tracks {
-  width: 500px;
+  width: 495px;
   height: 300px;
   overflow: scroll;
 }
