--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Sign Up</title>
+  <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
